gitea-config/ingress.yaml
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: my-gitea-ingress
#   # namespace: gitea-repo
#   # annotations:
#   # cert-manager.io/cluster-issuer: "letsencrypt-prod"
# spec:
#   rules:
#   - host: niraj1.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: my-gitea-service
#             port:
#               number: 80

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: niraj1.com
    http:
      paths:
      - backend:
          serviceName: my-gitea-service
          servicePort: 80
